--- a/backend/.env
+++ b/backend/.env
@@ -20,7 +20,7 @@ JWT_SECRET=ULVSKEX7A53Z9R6T2MGNH4
 
 # hosting
 # DB_HOST=147.50.228.21
-# DB_USER=dktimeh_hatsanai
-# DB_PASSWORD=O33n54lq^
-# DB_NAME=dktimeh_dormitorymaintenance_db
+# DB_USER=dktimeh_hatsanai2
+# DB_PASSWORD=qu8u!7F29
+# DB_NAME=dktimeh_dormitorymaintenance_db3
 # JWT_SECRET=ULVSKEX7A53Z9R6T2MGNH4
